# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: lint.yml  page-analyzer-check.yml  upload-artifact.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
templates/: index.html
