[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Loginov <itsmeegorloginov@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
validators = "^0.22.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
